Mobile business page page overflow fix

--- a/themes/gv_sky/css/sass/_parts_compare/rating-hover.sass
+++ b/themes/gv_sky/css/sass/_parts_compare/rating-hover.sass
@@ -23,8 +23,10 @@
 	opacity: 0
 	visibility: hidden
 	cursor: default
-
 	+arrow('top', 'center', 10px, white, lighten($divider, 5), 3px)
+
+	+max(736)
+		display: none
 
 	// &:after
 		// box-shadow: 0 -2px 6px rgba(0,0,0, 0.3)
